--- a/mod.conf
+++ b/mod.conf
@@ -1,9 +1,9 @@
-name = template-mod
-description = 
+name = modname_tooltip
+description = Modname Tooltip Minecraft mod for MineClone2
 depends =
 optional_depends =
 author = MineClone2 Mods
-title = Template Mod
+title = Modname Tooltip
 
 min_minetest_version = 5.4
 max_minetest_version =
