basic working tooltip

--- a/mod.conf
+++ b/mod.conf
@@ -1,7 +1,7 @@
 name = modname_tooltip
 description = Modname Tooltip Minecraft mod for MineClone2
-depends =
-optional_depends =
+depends = tt, mcl_colors
+optional_depends = mcl_tt
 author = MineClone2 Mods
 title = Modname Tooltip
 
